Revision history for AnyEvent-HTTPD

0.04
        - changed the API to actually call the events for all path segments
          of an URL. also removed the ugly '/' => '_' mapping for the path
          seperators. Sorry for any breakage in your code ;-/

0.03 Tue Apr 15 12:57:10 CEST 2008
        - added submit() function to Appgets
        - fixed a bug in the url() method of AnyEvent::HTTPD::Request where the
          url wasn't get correctly. resulting in bad form behaviour.

0.02 Sat Mar 22 16:09:55 CET 2008
	- rewrote the module API to be more "async"
	- made it possible to respond to requests asynchronously in C<AnyEvent::HTTPD>.
	- added lots of example scripts

0.01 Thu Mar 20 19:53:31 CET 2008
	- first release