@@ -1,6 +1,8 @@
 Revision history for AnyEvent-HTTPD
 
 0.04
+        - removed TCP* classes and using AnyEvent::Handle instead.
+        - added size and maxlength args to the C<entry> function in Appgets
         - changed the API to actually call the events for all path segments
           of an URL. also removed the ugly '/' => '_' mapping for the path
           seperators. Sorry for any breakage in your code ;-/
